@@ -58,6 +58,15 @@ use EPrints;
 use EPrints::Database qw( :sql_types );
 @ISA = qw( EPrints::Database );
 
+our $I18L = {
+	en => {
+		collate => "utf8_general_ci",
+	},
+	de => {
+		collate => "utf8_unicode_ci",
+	},
+};
+
 use strict;
 
 ######################################################################
@@ -368,6 +377,15 @@ sub index_queue
 			"SYSDATE()"
 		]);
 	}
+}
+
+sub get_default_charset { "utf8" }
+
+sub get_default_collation
+{
+	my( $self, $langid ) = @_;
+
+	return exists($I18L->{$langid}) ? $I18L->{$langid}->{collate} : undef;
 }
 
 1; # For use/require success
